--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ dependencies = [
     "multiprocess",
     "numpy>=1.25.0,<2.0.0",
     "tqdm",
+    "lxml_html_clean",
     "lxml[html_clean]",
 ]
 
